Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 4.0.1, Qt Creator 4.1.0
-
Windows
Description
When certain qml file is being tried for reformat QT Creators (Tools->QML/JS->Reformat File) crashes if qml file has strings which are being concatenated.
It appears that number of string literals which are being concatenated with “+” operator in javascript sections
I will Attached qml file soon to crash Qt Creator.
Attachments
For Gerrit Dashboard: QTCREATORBUG-17331 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
177957,4 | QmlJS: Fix crash in QML reformatter | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |